# rust-axum-api

./: .env  Cargo.toml
migrations/: 20250325163619_create_agents_table.sql  20250325163619_create_models_table.sql  20250325163809_create_requests_table.sql  20250325164209_create_attestations_table.sql  20250325164209_create_requests_table.sql  20250328234310_add_request_status copy.sql  20250331023148_add_type_to_request.sql
src/: main.rs
src/config/: database.rs  parameter.rs
src/dto/: agent_dto.rs  attestation_dto.rs  mod.rs  model_dto.rs  request_dto.rs
src/entity/: agent.rs  attestation.rs  mod.rs  model.rs  request.rs
src/error/: agent_error.rs  api_error.rs  api_request_error.rs  attestation_error.rs  mod.rs  model_error.rs
src/handler/: agent_handler.rs  attestation_handler.rs  mod.rs  model_handler.rs  register_handler.rs  request_handler.rs
src/middleware/: auth.rs  mod.rs
src/repository/: agent_repository.rs  attestation_repository.rs  mod.rs  model_repository.rs  request_repository.rs
src/routes/: agent.rs  attestation.rs  mod.rs  model.rs  register.rs  request.rs  root.rs
src/service/: agent_service.rs  attestation_service.rs  mod.rs  model_service.rs  request_service.rs  token_service.rs
src/state/: agent_state.rs  attestation_state.rs  auth_state.rs  mod.rs  model_state.rs  request_state.rs  token_state.rs
